# flyway-naming-checker

./: Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: release.yml
src/: error.rs  file.rs  main.rs  naming_checker.rs
